fix(snapshot) Fix the problem of overlapping drop-down menus

--- a/src/assets/styles/antd-customize/tree.less
+++ b/src/assets/styles/antd-customize/tree.less
@@ -117,7 +117,7 @@
         content: '';
         display: block;
         width: 2px;
-        height: ~"calc(100% - 130px)";
+        height: ~"calc(100% - 64px)";
         border-left: 2px solid #ecf0f1;
         position: absolute;
         top: 40px;
@@ -181,7 +181,7 @@
           content: '';
           display: block;
           width: 2px;
-          height: ~"calc(100% - 130px)";
+          height: ~"calc(100% - 64px)";
           border-left: 2px solid #ecf0f1;
           position: absolute;
           top: 40px;
@@ -189,7 +189,7 @@
           z-index: 1;
         }
         &:last-child {
-          height: 120px;
+          height: 54px;
           padding: 0px;
         }
       }
